# src/swagger.json
@@ -237,6 +237,184 @@
 				}
 			}
 		},
+		"/Violation/deleteViolation": {
+			"delete": {
+				"operationId": "DeleteViolation",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"properties": {
+												"message": {},
+												"error": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"error"
+											],
+											"type": "object"
+										},
+										{
+											"properties": {
+												"error": {},
+												"message": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"message"
+											],
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"id": {
+										"type": "number",
+										"format": "double"
+									}
+								},
+								"required": [
+									"id"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/Violation/addNewViolation": {
+			"post": {
+				"operationId": "AddNewViolation",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"properties": {
+												"error": {},
+												"data": {
+													"properties": {
+														"officerId": {
+															"type": "number",
+															"format": "double"
+														},
+														"flagged": {
+															"type": "string"
+														},
+														"location": {
+															"type": "string"
+														},
+														"type": {
+															"type": "string"
+														},
+														"plate": {
+															"type": "string"
+														},
+														"date": {
+															"type": "string",
+															"format": "date-time"
+														},
+														"id": {
+															"type": "number",
+															"format": "double"
+														}
+													},
+													"required": [
+														"officerId",
+														"flagged",
+														"location",
+														"type",
+														"plate",
+														"date",
+														"id"
+													],
+													"type": "object"
+												},
+												"message": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"data",
+												"message"
+											],
+											"type": "object"
+										},
+										{
+											"properties": {
+												"data": {},
+												"message": {},
+												"error": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"error"
+											],
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"location": {
+										"type": "string"
+									},
+									"type": {
+										"type": "string"
+									},
+									"plate": {
+										"type": "string"
+									},
+									"date": {
+										"type": "string",
+										"format": "date-time"
+									}
+								},
+								"required": [
+									"location",
+									"type",
+									"plate",
+									"date"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/User/allusers": {
 			"get": {
 				"operationId": "GetAllUsers",
